# thinkube-installer

./: .env.example  .gitignore  ALPHA_2_TASKS.md  ALPHA_3_TASKS.md  CLAUDE.md  CLEAN_RELEASE_STRATEGY.md  CONTRIBUTING.md  DEBIAN_PACKAGING.md  INSTALLER_FLOW.md  KUBEADM_MIGRATION_PLAN.md  MACOS_PORT.md  MIGRATION_VERIFICATION_REPORT.md  NETWORK_DISCOVERY.md  NODE_CONFIGURATION_UI.md  PLAYBOOK_EXECUTION_PATTERN.md  PROPER_ERROR_HANDLING.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  REQUIREMENTS.md  SECURITY_AUDIT_REPORT.md  SKIP_CONFIG_MODE.md  TAILSCALE_OPERATOR_MIGRATION.md  package-lock.json  package.json  setup-dev-env.sh  test-dev.sh  validate-migration.sh
backend/: main.py
frontend/: index.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  (+2 more)
frontend-vue-backup/: index.html  vite.config.js
frontend/src-tauri/: Cargo.toml  deb-postinst.sh  deb-prerm.sh  tauri.conf.json
frontend/src-tauri/backend/: main.py  main_old.py  requirements.txt
frontend/src-tauri/backend/app/: __init__.py  shared.py
frontend/src-tauri/backend/app/api/: ansible_setup.py  discovery.py  github.py  gpu_detection.py  huggingface.py  logs.py  playbook_stream.py  playbooks.py  system.py  tailscale.py  tokens.py  zerotier.py
frontend/src-tauri/backend/app/core/: __init__.py  discovery.py
frontend/src-tauri/backend/app/models/: __init__.py  server.py
frontend/src-tauri/backend/app/services/: ansible_environment.py  ansible_executor.py  release_resolver.py
frontend/src-tauri/backend/app/utils/: __init__.py  network.py
frontend/src-tauri/src/: lib.rs  main.rs
(+115 files in other folders)
