[package]
name = "thinkube-installer"
version = "0.1.0"
description = "Thinkube Kubernetes Homelab Installer"
authors = ["Alejandro Martínez Corriá"]
license = "Apache-2.0"
repository = "https://github.com/thinkube/thinkube-installer"
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "thinkube-installer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
